--- a/packages/react-app/src/index.css
+++ b/packages/react-app/src/index.css
@@ -1,3 +1,8 @@
+::selection {
+  background-color: #f01a37;
+  color: #fff;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
@@ -68,4 +73,14 @@ table {
 .burgerBtn div {
   width: 30px;
   height: 30px;
+}
+
+.bn-notify-custom .bn-notify-notification {
+  margin-bottom: 2rem !important;
+  margin-right: 1rem !important;
+}
+
+.bn-notify-custom .bn-notify-notification-info-message {
+  font-size: 1rem;
+  font-weight: normal !important;
 }
