--- a/packages/gateway.optimism.io/src/index.css
+++ b/packages/gateway.optimism.io/src/index.css
@@ -20,11 +20,12 @@ table {
 }
 
 .rainbowText {
-  background: linear-gradient(to right, rgb(240, 26, 55), #169fc9, #f01a37);
+  background: linear-gradient(to right, #f01a37, #169fc9, #f01a37);
   background-size: 200% 200%;
+  animation: rainbow 1.5s ease-in-out infinite;
+  background-clip: text;
   -webkit-background-clip: text;
   transition: all 0.3s ease-in-out !important;
-  color: rgba(0, 0, 0, 0) !important;
 }
 
 .rainbowText:hover,
