--- a/packages/gateway.optimism.io/src/index.css
+++ b/packages/gateway.optimism.io/src/index.css
@@ -22,15 +22,24 @@ table {
 .rainbowText {
   background: linear-gradient(to right, #f01a37, #169fc9, #f01a37);
   background-size: 200% 200%;
-  animation: rainbow 1.5s ease-in-out infinite;
   background-clip: text;
   -webkit-background-clip: text;
   transition: all 0.3s ease-in-out !important;
+  color: rgba(0, 0, 0, 0) !important;
 }
 
 .rainbowText:hover,
 .rainbowText:focus span {
   animation: rainbow 1.5s ease-in-out infinite;
+}
+
+svg .rainbowFill {
+  fill: #f01a37;
+  transition: fill 0.5s ease;
+}
+
+svg:hover .rainbowFill {
+  fill: #cc142d;
 }
 
 @keyframes rainbow {
