--- a/packages/optimism.io/src/components/GasCalcSection/GasCalc.module.css
+++ b/packages/optimism.io/src/components/GasCalcSection/GasCalc.module.css
@@ -1,19 +1,3 @@
-.container {
-  box-shadow: -8px 8px 20px 0px #ededed;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  display: flex;
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-}
-
 .heading h1 {
   font-family: 'Roboto';
   font-size: 24px;
@@ -49,6 +33,7 @@
   display: flex;
   justify-content: space-between;
   flex-flow: row nowrap;
+  height: 100%;
 }
 
 .flexColumn {
@@ -70,6 +55,11 @@
   margin: auto;
   font-size: 14px;
   padding: 8px 14px 8px;
+  height: 100%;
+}
+
+.flexOutputGas:nth-of-type(2) {
+  margin-top: 15px;
 }
 
 .flexOutputGas .result {
