--- a/packages/optimism.io/src/components/GasCalcSection/GasCalc.module.css
+++ b/packages/optimism.io/src/components/GasCalcSection/GasCalc.module.css
@@ -51,6 +51,7 @@
 .flexOutputGas {
   flex-flow: column nowrap;
   display: flex;
+  justify-content: center;
   background: #eff0f8;
   font-size: 14px;
   padding: 8px 14px 8px;
