Adds status page link to footer (#34)
* Adds status page to header nav

* Moves status link to footer

* Removes relative links

--- a/packages/optimism.io/src/styles/index.scss
+++ b/packages/optimism.io/src/styles/index.scss
@@ -95,9 +95,9 @@ svg:hover .rainbowFill {
 }
 
 // Popover component
-.css-n0uled {
-  width: auto !important;
-  max-width: 240px !important;
+.chakra-popover__content {
+  width: unset !important;
+  max-width: unset !important;
 }
 
 // Demos page
